--- a/News_Classification_Project_Flask/static/css/styles.css
+++ b/News_Classification_Project_Flask/static/css/styles.css
@@ -355,6 +355,7 @@ img {
   box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.314);
   border-radius: .5rem;
   overflow: hidden;
+  position: relative;
 }
 
 .work__img img {
@@ -367,13 +368,14 @@ img {
 }
 
 .catogery_img_text{
-
   opacity: 0;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+  /* display: flex;
+  align-items: center; */
   text-align: center;
 }
 
@@ -410,6 +412,19 @@ div .text{
   outline: none;
   margin-bottom: var(--mb-4);
 }
+
+.contact__label {
+  width: 100%;
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-semi);
+  padding: 1rem;
+  border-radius: .5rem;
+  /* border: 1.5px solid var(--second-color); */
+  outline: none;
+  /* margin-bottom: var(--mb-4); */
+}
+
+
 
 .contact__button {
   display: block;
