--- a/News_Classification_Project_Flask/templates/register.html
+++ b/News_Classification_Project_Flask/templates/register.html
@@ -1,28 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-</head>
-
-<body>
-    <h1>Register Page</h1>
-
-    <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        {{ form.username }}
-        {{ form.password }}
-        {{ form.submit }}
-    </form>
-
-    <a href="{{ url_for('login') }}">Already have an account? Log In</a>
-</body>
-
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -31,22 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <style>
-            @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
-        *{
+    <style> 
+        @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
+        * {
             margin: 0;
             padding: 0;
             outline: none;
             box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;   
+            font-family: 'Poppins', sans-serif;
         }
-       .container .text{
+
+        .container .text {
             font-size: 20px;
             font-weight: 600;
             text-align: center;
         }
-        .container{
+
+        .container {
             background: #b5c9f3;
             width: 410px;
             padding: 30px;
@@ -56,99 +34,180 @@
             transform: translate(-50%, -50%);
             box-shadow: 10px 20px 30px rgba(53, 51, 51, 0.466);
         }
-       
-     .container .data{
+
+        .container .fullname {
+            display: flex;
+            width: 100%;
+        }
+
+
+
+        .container .FirstName {
             height: 45px;
             width: 100%;
-            margin: 40px 0;
-            
         }
-     form .data label{
-           font-size: 18px;
+
+        .container .LastName {
+            height: 45px;
+            width: 100%;
+            margin-left: 8px;
         }
-     form .data input{
+
+        form .FirstName label {
+            font-size: 18px;
+        }
+
+        form .LastName label {
+            font-size: 18px;
+        }
+
+        form .FirstName input {
             height: 100%;
             width: 100%;
             padding-left: 10px;
             font-size: 17px;
             border: 1px solid silver;
             border-end-end-radius: 10px;
-            
         }
-     form .data input:focus{
+
+        form .LastName input {
+            height: 100%;
+            width: 100%;
+            padding-left: 10px;
+            font-size: 17px;
+            border: 1px solid silver;
+            border-end-end-radius: 10px;
+
+
+
+        }
+
+        .container .data {
+            height: 45px;
+            width: 100%;
+            margin: 50px 0;
+
+        }
+
+        form .data label {
+            font-size: 18px;
+        }
+
+        form .data input {
+            height: 100%;
+            width: 100%;
+            padding-left: 10px;
+            font-size: 17px;
+            border: 1px solid silver;
+            border-end-end-radius: 10px;
+
+        }
+
+        form .data input:focus {
             border-color: #2995dd;
             border-bottom-width: 2px;
         }
 
-     form .signup-link{
+        form .signup-link {
             text-align: center;
         }
-     form .signup-link a{
+
+        form .signup-link a {
             color: #279eee;
             text-decoration: none;
         }
-     form .signup-link a:hover{
+
+        form .signup-link a:hover {
             text-decoration: underline;
         }
 
-    form div .btn{
-        text-align: center;
-    }
-    
-    input[type="submit" i]{
-        width: 100%;
-        height: 40px;
-        border: none;
-        font-size: large;
-        cursor: pointer;
-        background: hsl(224, 89%, 60%);
-        color: white;
-        outline: none;
-        letter-spacing: 2px;
-    }
-    
-    input[type="submit" i]:hover{
-        background: hsl(224, 100%, 54%);
-    }
+        form div .btn {
+            text-align: center;
+        }
 
-        
+        input[type="submit" i] {
+            width: 100%;
+            height: 40px;
+            border: none;
+            font-size: large;
+            cursor: pointer;
+            background: hsl(224, 89%, 60%);
+            color: white;
+            outline: none;
+            letter-spacing: 2px;
+
+        }
+
+        input[type="submit" i]:hover {
+            background: hsl(224, 100%, 54%);
+        }
+        .error{
+            color: red;
+            margin: 2px;
+        }
     </style>
 </head>
 
 <body>
-    
+
+    <!-- form starts -->
     <form method="POST" action="">
         <div class="container">
             <div class="text">
                 Register Form
-             </div>
+            </div>
 
-        {{ form.hidden_tag() }}
+            {{ form.hidden_tag() }}
 
-        <div class="data">
-            <label>Username</label>
-            {{ form.username }}
+            <div class="fullname">
+                <div class="FirstName">
+                    <label>FirstName</label>
+
+                    {{ form.firstname }}
+                </div>
+                <div class="LastName">
+                    <label>LastName</label>
+
+                    {{ form.lastname }}
+                </div>
+            </div>
+
+            <div class="data">
+                <label>Email</label>
+                {{ form.email }}
+                {% if form.email.errors %}
+                    <span class="error">{{ form.email.errors[0] }}</span>
+                {% endif %}
+            </div>
+            
+            <div class="data">
+                <label>Username</label>
+                {{ form.username }}
+                {% if form.username.errors %}
+                    <span class="error">{{ form.username.errors[0] }}</span>
+                {% endif %}
+            </div>
+            <div class="data">
+                <label>Password</label>
+                {{ form.password }}
+            </div>
+            <div class="btn">
+                {{ form.submit }}
+
+            </div>
+
+            <br>
+            <!-- <a href="{{ url_for('register') }}">Don't have an account? Sign Up</a> -->
+
+            <div class="signup-link">
+                Already have an account? <a href="{{ url_for('login') }}"> Login</a>
+                <br>
+                <a href="{{url_for('home')}}">Go Back</a>
+            </div>
+
         </div>
-        <div class="data">
-            <label>Password</label>
-            {{ form.password }}
-        </div>
-        <br>
-        <div class="btn">
-            {{ form.submit }} 
-          
-        </div>
-      
-        <br>
-        <!-- <a href="{{ url_for('register') }}">Don't have an account? Sign Up</a> -->
-
-        <div class="signup-link">
-            Already have an account? <a href="{{ url_for('login') }}"> Login</a>
-         </div>
-
-    </div>
     </form>
 
-    </body>
+</body>
 
 </html>
