--- a/News_Classification_Project_Flask/static/css/styles.css
+++ b/News_Classification_Project_Flask/static/css/styles.css
@@ -35,6 +35,9 @@
   }
 }
 
+
+
+
 /*===== BASE =====*/
 *, ::before, ::after {
   box-sizing: border-box;
@@ -71,6 +74,9 @@ img {
   display: block;
 }
 
+
+
+
 /*===== CLASS CSS ===== */
 .section-title {
   position: relative;
@@ -98,6 +104,9 @@ img {
   padding-bottom: 2rem;
 }
 
+
+
+
 /*===== LAYOUT =====*/
 .bd-grid {
   max-width: 1024px;
@@ -116,6 +125,10 @@ img {
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
 }
 
+
+
+
+
 /*===== NAV =====*/
 .nav {
   height: var(--header-height);
@@ -123,6 +136,33 @@ img {
   justify-content: space-between;
   align-items: center;
   font-weight: var(--font-semi);
+  
+}
+
+.nav__logo{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #000;
+  margin-right: 100px !important;
+}
+
+.nav__logo img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.nav__logo span {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .nav__logo span {
+    display: inline-block;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -174,6 +214,9 @@ img {
 
 }
 
+
+
+
 /*Active menu*/
 .active::after {
   position: absolute;
@@ -185,10 +228,16 @@ img {
   background-color: var(--first-color);
 }
 
+
+
+
 /*=== Show menu ===*/
 .show {
   right: 0;
 }
+
+
+
 
 /*===== HOME =====*/
 .home {
@@ -241,6 +290,10 @@ img {
   width: 360px;
 }
 
+
+
+
+
 /*BUTTONS*/
 .button {
   display: inline-block;
@@ -256,6 +309,22 @@ img {
   box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.404);
 }
 
+.button_form {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: .75rem 2.5rem;
+  font-weight: var(--font-semi);
+  border-radius: .5rem;
+  transition: .3s;
+}
+
+.button_form:hover {
+  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.404);
+}
+
+
+
 /* ===== ABOUT =====*/
 .about__container {
   row-gap: 2rem;
@@ -270,11 +339,14 @@ img {
   justify-self: center;
 
 }
-
 .about__img img {
   width: 250px;
   border-radius: .5rem;
 }
+
+
+
+
 
 /* ===== SKILLS =====*/
 .skills__container {
@@ -330,18 +402,16 @@ img {
 .skills__css {
   width: 85%;
 }
-
 .skills__js {
   width: 65%;
 }
-
 .skills__ux {
   width: 85%;
 }
-
 .skills__img {
   border-radius: .5rem;
 }
+
 
 
 
@@ -364,7 +434,6 @@ img {
 
 .work__img:hover img {
   transform: scale(1.1);
-
 }
 
 .catogery_img_text{
@@ -378,7 +447,6 @@ img {
   align-items: center; */
   text-align: center;
 }
-
 
 div .text{
   display: inline-block;
@@ -397,6 +465,7 @@ div .text{
 .work__img:hover .catogery_img_text{
   opacity: 1;
 }
+
 
 
 
@@ -424,8 +493,6 @@ div .text{
   /* margin-bottom: var(--mb-4); */
 }
 
-
-
 .contact__button {
   display: block;
   border: none;
@@ -434,6 +501,9 @@ div .text{
   cursor: pointer;
   margin-left: auto;
 }
+
+
+
 
 /* ===== FOOTER =====*/
 .footer {
@@ -463,17 +533,46 @@ div .text{
   font-size: var(--smaller-font-size);
 }
 
+
+
+
+
+
 /* ===== MEDIA QUERIES=====*/
+
 @media screen and (max-width: 320px) {
   .home {
     row-gap: 2rem;
   }
-  .home__img {
-    width: 200px;
+}
+
+@media screen and (max-width: 445px) {
+  .home__img{
+    display: block;
+    width: 230px;
+    top: 55%;
+    
+  }
+  .button{
+    position: relative;
+    top: 120px;
+    
   }
 }
 
-@media screen and (min-width: 576px) {
+@media screen and (max-width: 370px) {
+  .home__img{
+    display: none;
+  
+  }
+  .button{
+    position: relative;
+    top: -5px;
+
+  }
+}
+
+@media screen and (min-width: 676px) {
   .home {
     padding: 4rem 0 2rem;
   }
@@ -495,20 +594,6 @@ div .text{
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     text-align: initial;
-  }
-  .skills__container {
-    grid-template-columns: .7fr;
-    justify-content: center;
-    column-gap: 1rem;
-  }
-  .work__container {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 2rem;
-    padding-top: 2rem;
-  }
-  .contact__form {
-    width: 360px;
-    padding-top: 2rem;
   }
   .contact__container {
     justify-items: center;
@@ -584,3 +669,4 @@ div .text{
     width: 450px;
   }
 }
+
