Algo and UI and virt

--- a/News_Classification_Project_Flask/templates/dashboard.html
+++ b/News_Classification_Project_Flask/templates/dashboard.html
@@ -225,7 +225,7 @@
                         <br> 
                        
                         <textarea name="data" placeholder="Here..." id="data" rows="15" cols="1" class="contact__input"></textarea> 
-                        <input type="button" class="contact__button button_form" onclick="submitForm();" value="Predict">
+                        <input type="button" class="contact__button button_form" onclick="submitForm();" value="Classify">
                         <br>    
                         </form>
 
