--- a/News_Classification_Project_Flask/templates/dashboard.html
+++ b/News_Classification_Project_Flask/templates/dashboard.html
@@ -169,7 +169,7 @@
            
             <!--===== Catogery =====-->
             <section class="catogery section" id="catogery">
-                <h2 class="section-title">Catogery</h2>
+                <h2 class="section-title">Category</h2>
 
                 <div class="work__container bd-grid">
 
@@ -234,7 +234,7 @@
                                                 
                     <div class="div2">
                         <br>
-                        <label for="label" class="contact__lable" style="font-weight:600; font-size: large;">Your news belogs to:</label>
+                        <label for="label" class="contact__lable" style="font-weight:600; font-size: large;">Your news belongs to:</label>
                         <br>
                         <span id="errorMsg">
 
@@ -289,7 +289,7 @@
                 }
                 else if (/[a-zA-Z]/.test(x)) {
 
-                document.getElementById("errorMsg").innerHTML = "<span style='color:red; font-weight:100'>Please enter a Nepali text only</span>";
+                document.getElementById("errorMsg").innerHTML = "<span style='color:red; font-weight:100'>Please enter Nepali text only</span>";
                 document.getElementById("prediction").style.display = "none";
                 // var errorMsg = document.getElementById("prediction");
                 // errorMsg.style.color = "red";
@@ -303,7 +303,7 @@
                 }
 
                 else if (/[0-9]/.test(x)) {
-                document.getElementById("errorMsg").innerHTML = "<span style='color:red; font-weight:100'>Please enter a Nepali text only</span>";
+                document.getElementById("errorMsg").innerHTML = "<span style='color:red; font-weight:100'>Please enter Nepali text only</span>";
                 document.getElementById("prediction").style.display = "none";
                 // var errorMsg = document.getElementById("prediction");
                 // errorMsg.style.color = "red";
@@ -316,7 +316,7 @@
                 }
 
                 else if (/^[A-Za-z0-9\s]+$/.test(x)) {
-                document.getElementById("errorMsg").innerHTML = "<span style='color:red; font-weight:100'>Please enter a Nepali text only</span>";
+                document.getElementById("errorMsg").innerHTML = "<span style='color:red; font-weight:100'>Please enter Nepali text only</span>";
                 document.getElementById("prediction").style.display = "none";
                 // var errorMsg = document.getElementById("prediction");
                 // errorMsg.style.color = "red";
@@ -329,7 +329,7 @@
                 }
     
                 else if (/[!#$%^&*]/.test(x)) {
-                document.getElementById("errorMsg").innerHTML = "<span style='color:red; font-weight:100'>Please enter a Nepali text only</span>";
+                document.getElementById("errorMsg").innerHTML = "<span style='color:red; font-weight:100'>Please enter Nepali text only</span>";
                 document.getElementById("prediction").style.display = "none";
                 // var errorMsg = document.getElementById("prediction");
                 // errorMsg.style.color = "red";
